fix: fix error with overflowing content on blog page

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -9,13 +9,14 @@
 	flex-direction: column;
 	align-items: center;
 	overflow-x: hidden;
-	min-width: 100%;
-	min-height: 100%;
+	width: 100%;
+	min-height: 100vh;
 	background-image: url('../assets/background.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center;
 	background-size: cover;
+	box-sizing: border-box;
 }
 
 @include navbar.navbar-main;
