--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -2,3 +2,4 @@ $main: rgb(0, 153, 255);
 $main-hover: rgb(0, 119, 255);
 $text: rgb(8, 9, 73);
 $text-hover: rgb(8, 34, 73);
+$title-font: 'Itim', cursive;
