--- a/src/style/views/_blog.scss
+++ b/src/style/views/_blog.scss
@@ -2,12 +2,13 @@
 
 @mixin blog-main {
 	.blog {
-		width: 70%;
+		width: 60%;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
 		min-height: 90vh;
+
 		&__post {
 			background-color: rgba(variables.$main, 0.7);
 			box-sizing: border-box;
@@ -19,6 +20,7 @@
 			flex-direction: column;
 			align-items: center;
 			&_title {
+				font-family: variables.$title-font;
 				font-size: 1.5rem;
 				font-weight: 700;
 			}
